# gentians

./: .gitignore  README.md  clingo_interface.py  example_programs.py  main.py  program_sampler.py  setup.cfg  strategies.py  test_suite.py  utils.py  variable_placer.py
.github/workflows/: python-app.yml
benchmarks/: README.md  run_examples.sh
benchmarks/ilasp/: 4queens.las  adj_to_red.las  clique.txt  coin.las  coloring.txt  evenodd.txt  grandparent.txt  hamming0.txt  hamming0n.las  hamming1.txt  hamming1n.txt  ps6.las  subsum1.las  subsum1n.txt  subsum1nop.txt  subsum2.txt  subsum2nua.txt  subsum2nuac.las  subsum2prod.las  subsum2produa.las  subsum3.txt  sudoku.txt
examples/1-type-pointsto/: bias.pl
examples/abduce/: bias.pl
examples/cliquer-leg/: bias.pl
examples/krk/: bias-cons.pl  bias.pl
examples/path/: bias.pl
examples/small/: bias.pl
gentians/: __init__.py  arguments.py  clingo_interface.py  example_programs.py  gentians.py  parser.py  program_sampler.py  strategies.py  test_suite.py  utils.py  variable_placer.py
gentians/logic_programs/: base_rules.lp  equal_rules.lp  rules_for_aggregates.lp  rules_for_aggregates_arithm_comparison.lp  rules_for_arithm.lp  rules_for_comparison.lp  rules_only_standard_atoms.lp
results/2023ilp/: run_0_all.sh  run_4queens.sh  run_5queens.sh  run_adjacent_to_red.sh  run_clique.sh  run_coin.sh  run_coloring.sh  run_even_odd.sh  run_grandparent.sh  run_hamming_0.sh  run_hamming_0_noise.sh  run_hamming_1.sh  run_hamming_1_noise.sh  run_latin_square.sh  (+21 more)
tests/: benchmarking.py  runner.sh  test_suite.py  test_utils.py
(+44 files in other folders)
