[metadata]
name = gentians
version = 1.0.0
author = Damiano Azzolini
author_email = damiano.azzolini@unife.it
description = GENTIANS: GENeTic algorithm for Inductive learning of ANswer Set programs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/damianoazzolini/gentians
project_urls =
    Bug Tracker = https://github.com/damianoazzolini/gentians/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent

[options]
packages = gentians
python_requires = >=3.9
install_requires =
    clingo>=5.5


[options.entry_points]
console_scripts =
    gentians = gentians:main